# DigiStock

./: .dockerignore  .env_name  .gitignore  Dockerfile  README.md  agent_logic.py  app.html  backend.py  config.json  docker-compose.yml  main.py  mcp.json  multi_agent.ipynb  pyproject.toml  requirements.txt  runner.py  runner_tools.py  server.py  test_predict.py  xgb_model.py
backend/: backend.py
cli/: go.mod  go.sum  main.go
cli/cmd/: analyze.go  health.go  root.go  tools.go  tui.go
cli/tui/: model.go  styles.go
models/: scaler.pkl  xgb_model.json
template/: index.html
tools/: backtesting.py  indicators.py  market_data.py  predictions.py  utils.py
