[project]
name = "digistock"
version = "0.1.0"
description = "AI-powered NSE stock analysis — pure CLI"
authors = [
  { name = "Gyankrit Bhuyan", email = "gyankbhuyan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchain-mcp-adapters",
    "yfinance",
    "pandas",
    "numpy",
    "xgboost",
    "scikit-learn",
    "langgraph-supervisor>=0.0.29",
]



